Fixed overflow-x

--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 .cover {
